[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/StatWheel.gd" type="Script" id=1]
[ext_resource path="res://sprites/wheel.png" type="Texture" id=2]
[ext_resource path="res://sprites/wheel_structure.png" type="Texture" id=3]
[ext_resource path="res://sprites/cosito.png" type="Texture" id=4]
[ext_resource path="res://sprites/small_gem_0.png" type="Texture" id=5]
[ext_resource path="res://fonts/prstartk.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/wheel_point.tscn" type="PackedScene" id=7]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 16 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[node name="StatWheel" type="Node2D"]
script = ExtResource( 1 )

[node name="structure" type="AnimatedSprite" parent="."]
position = Vector2( 0, 53 )
scale = Vector2( 1.65625, 1 )
frames = SubResource( 2 )

[node name="wheel" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="wheel_point" parent="wheel" instance=ExtResource( 7 )]
position = Vector2( -2.8258, -3.00247 )
effect_name = "Vitality"
effect_description = "+1 Life"

[node name="wheel_point8" parent="wheel" instance=ExtResource( 7 )]
position = Vector2( 18.835, 46.5537 )
effect_name = "Tired"
effect_description = "-1 Life"

[node name="wheel_point4" parent="wheel" instance=ExtResource( 7 )]
position = Vector2( -49.6603, 47.7374 )
effect_name = "Oh no"
effect_description = "Cursed"

[node name="wheel_point2" parent="wheel" instance=ExtResource( 7 )]
position = Vector2( 17.7963, 18.5551 )
effect_name = "Caffeine"
effect_description = "+1 Speed"

[node name="wheel_point3" parent="wheel" instance=ExtResource( 7 )]
position = Vector2( -51.0002, 18.357 )
effect_name = "Free Roll"
effect_description = "+25 gems"

[node name="wheel_point5" parent="wheel" instance=ExtResource( 7 )]
position = Vector2( -2.18235, 66.3343 )
effect_name = "Pumped"
effect_description = "+1 Damage"

[node name="wheel_point6" parent="wheel" instance=ExtResource( 7 )]
position = Vector2( -30.4822, 65.9912 )
effect_name = "Weak"
effect_description = "-1 Damage"

[node name="wheel_point7" parent="wheel" instance=ExtResource( 7 )]
position = Vector2( -29.6816, -0.0418463 )
effect_name = "Sleepy"
effect_description = "-1 Speed"

[node name="cosito" type="AnimatedSprite" parent="."]
position = Vector2( 1, -66 )
frames = SubResource( 4 )

[node name="cositor" type="Area2D" parent="cosito"]

[node name="col" type="CollisionShape2D" parent="cosito/cositor"]
position = Vector2( -1, 19 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]

[node name="collider" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 117 )
shape = SubResource( 3 )

[node name="price_lbl" type="Label" parent="."]
margin_left = -8.0
margin_top = 119.0
margin_right = 40.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 5 )
text = "x"

[node name="gem" type="Sprite" parent="."]
position = Vector2( -19, 125 )
texture = ExtResource( 5 )

[connection signal="area_entered" from="cosito/cositor" to="." method="_on_cositor_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
